--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
             "src": "images/imagem512.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "maskable"
+            "purpose": "any maskable"
         }
     ],
     "lang": "pt-BR",
