--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
         }
     ],
     "lang": "pt-BR",
-    "start_url": "/index.html",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "white",
     "theme_color": "white"
