--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
  
     ],
     "lang": "pt-BR",
-    "start_url": "/index.html",
+    "start_url": "/formuDoAyrton/index.html",
     "display": "standalone",
     "background_color": "white",
     "theme_color": "white"
