--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
     "short_name": "f1",
     "icons": [
         {
-            "src": "images/imagem256.png",
+            "src": "/images/imagem256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "images/imagem512.png",
+            "src": "/images/imagem512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "images/imagem128.png",
+            "src": "/images/imagem128.png",
             "sizes": "128x128",
             "type": "image/png"
         }
